Move /getModel to Next API
