# nodejs-server-server/api/swagger.yaml
@@ -80,39 +80,6 @@ paths:
                     schema:
                         $ref: '#/definitions/error'
             x-swagger-router-controller: 'Meditor'
-    /getModel:
-        get:
-            summary: 'Gets a Model'
-            description: 'Gets a Model object'
-            operationId: 'getModel'
-            parameters:
-                - name: 'name'
-                  in: 'query'
-                  description: 'Name of the model'
-                  required: true
-                  type: 'string'
-            responses:
-                200:
-                    description: 'Successful response'
-                    schema:
-                        $ref: '#/definitions/model'
-                400:
-                    description: 'Bad request'
-                    schema:
-                        $ref: '#/definitions/error'
-                422:
-                    description: 'Invalid syntax'
-                    schema:
-                        $ref: '#/definitions/error'
-                500:
-                    description: 'Server error'
-                    schema:
-                        $ref: '#/definitions/error'
-                503:
-                    description: 'Service not available'
-                    schema:
-                        $ref: '#/definitions/error'
-            x-swagger-router-controller: 'Meditor'
     /putDocument:
         post:
             summary: 'Puts a document'
